# no-js-speedtest

./: Cargo.toml  Dockerfile  LICENSE  README.md  bacon.toml  default.nix  flake.nix  shell.nix
nix/: default.nix
src/: download.rs  main.rs  routes.rs  session.rs  templates.rs  utils.rs
templates/: download.html  finish_download.html  index.html  item.html  privacy.html  results.html  start.html  start_download.html
templates/fragments/: footer.html  head.html
