[package]
name = "no-js-speedtest"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]

[dependencies]
ahash = "0.8.12"
askama = "0.14.0"
axum = { version = "0.8.6", features = ["macros", "multipart"] }
bytes = "1.10.1"
color-eyre = "0.6.5"
dashmap = "6.1.0"
http-body = "1.0.1"
image = "0.25.8"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_urlencoded = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "chrono",
  "fmt",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[profile.release]
strip = true
lto = true
